--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -42,3 +42,11 @@ GITHUB_APP_INSTALLATION_URL = [github-app-installation-url]
 
 # Kafka brokers
 KAFKA_BROKERS="["localhost:9092"]"
+
+# Kafka
+KAFKA_CLIENT_ID='KAFKA_CLIENT_ID'
+KAFKA_GROUP_ID = 'KAFKA_GROUP_ID'
+
+# Kafka topics
+CHECK_USER_ACCESS_TOPIC="auth.user.access"
+QUEUE_SERVICE_NAME= 'QUEUE_SERVICE_NAME'
