--- a/helm/charts/amplication/values-prod.yaml
+++ b/helm/charts/amplication/values-prod.yaml
@@ -3,7 +3,8 @@ amplication-client:
     image:
       repository: 407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-client
   service:
-    hostname: app.amplication.com	    
+    hostname: app.prod.amplication-dev.com
+    hostname_production: app.amplication.com
 amplication-server:
   deployment:
     image:
@@ -16,11 +17,32 @@ amplication-server:
     hostname_production: server.amplication.com
   config:
     env:
+      HOST: "https://server.prod.amplication-dev.com"
+      CLIENT_HOST: 'https://app.prod.amplication-dev.com'
+
+      #GCP - APPS Builder
+
+      DEFAULT_DISK: gcs
+      LOCAL_DISK_ROOT: /artifacts
+      CONTAINER_BUILDER_DEFAULT: cloud-build
+      GCS_BUCKET: amplication-production-artifacts
+
+      #GCP - APPS Deployer
+      DEPLOYER_DEFAULT: gcp
+
+      GCP_APPS_PROJECT_ID: amplication-production-apps
+      GCP_APPS_REGION: us-east1
+      GCP_APPS_TERRAFORM_STATE_BUCKET: amplication-production-apps-state-bucket
+      GCP_APPS_DATABASE_INSTANCE: apps-database-instance
+      GCP_APPS_DOMAIN: amplication.app
+
+      DOCKER_HOST: tcp://docker:2375
+
+      #GitHub App
       GITHUB_APP_APP_ID: "189214"
-      CONTAINER_BUILDER_DEFAULT: docker
       GITHUB_APP_CLIENT_ID: "Iv1.7eb319d8e3c170d7"
       GITHUB_APP_INSTALLATION_URL: "https://github.com/apps/amplication-aws/installations/new?state={state}"
-      GITHUB_REDIRECT_URI: "https://server.prod.amplication-dev.com/github/callback"
-      GITHUB_SECRET_SECRET_NAME: "projects/948093699220/secrets/github-secret-amplication-aws/versions/1"
-      HOST: "https://server.prod.amplication-dev.com"
+
+      #GitHub OAuth App
       GITHUB_CLIENT_ID: "a4e9055e5f21448d6de7"
+      GITHUB_REDIRECT_URI: "https://server.prod.amplication-dev.com/github/callback"
