fix: env files data

--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -40,13 +40,13 @@ GITHUB_APP_APP_ID = [github-app-app-id]
 GITHUB_APP_PRIVATE_KEY = [github-app-private-key]
 GITHUB_APP_INSTALLATION_URL = [github-app-installation-url]
 
-# Kafka brokers
-KAFKA_BROKERS="["localhost:9092"]"
-
 # Kafka
-KAFKA_CLIENT_ID='KAFKA_CLIENT_ID'
-KAFKA_GROUP_ID = 'KAFKA_GROUP_ID'
+KAFKA_BROKERS="["localhost:9092"]"
+KAFKA_CLIENT_ID='server-queue-client'
+KAFKA_GROUP_ID = 'main-server-group'
 
 # Kafka topics
 CHECK_USER_ACCESS_TOPIC="auth.user.access"
 QUEUE_SERVICE_NAME= 'QUEUE_SERVICE_NAME'
+
+# BASE_BUILDS_FOLDER
