--- a/packages/amplication-storage-gateway/.env
+++ b/packages/amplication-storage-gateway/.env
@@ -5,11 +5,10 @@ PORT=3002
 
 # Kafka Topics
 CHECK_USER_ACCESS_TOPIC="auth.user.access"
-KAFKA_CLIENT_ID='KAFKA_CLIENT_ID'
 
-# Kafka brokers
+# Kafka
 KAFKA_BROKERS="["localhost:9092"]"
-KAFKA_GROUP_ID = 'KAFKA_GROUP_ID'
+KAFKA_CLIENT_ID='storage-queue-client'
+KAFKA_GROUP_ID = 'storage-server-group'
 
-BASE_BUILDS_FOLDER = 'BASE_BUILDS_FOLDER'
-QUEUE_SERVICE_NAME= 'QUEUE_SERVICE_NAME'
+# BASE_BUILDS_FOLDER 
