--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -42,5 +42,8 @@ GITHUB_APP_APP_ID = [github-app-app-id]
 GITHUB_APP_PRIVATE_KEY = [github-app-private-key]
 GITHUB_APP_INSTALLATION_URL = [github-app-installation-url]
 
-# Kafka brokers
-KAFKA_BROKER_URL_VAR="localhost:9092"
+# Kafka
+KAFKA_BROKERS="["localhost:9092"]"
+KAFKA_CLIENT_ID='server-queue-client'
+KAFKA_GROUP_ID = 'main-server-group'
+
