use exact version of lodash

--- a/packages/amplication-client/package.json
+++ b/packages/amplication-client/package.json
@@ -17,7 +17,7 @@
     "events": "3.3.0",
     "formik": "2.2.9",
     "graphql": "15.0.0",
-    "lodash": "^4.17.21",
+    "lodash": "4.17.21",
     "pluralize": "8.0.0",
     "query-string": "7.1.1",
     "react": "16.14.0",
@@ -104,7 +104,7 @@
     "@types/chalk-pipe": "2.0.0",
     "@types/downloadjs": "1.4.3",
     "@types/jest": "24.9.1",
-    "@types/lodash": "^4.14.182",
+    "@types/lodash": "4.14.182",
     "@types/node": "12.20.16",
     "@types/pluralize": "0.0.29",
     "@types/react": "16.14.11",
