--- a/packages/amplication-prisma-db/package.json
+++ b/packages/amplication-prisma-db/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "prebuild": "rimraf lib",
     "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format": "prettier --write \"**/*.{js,ts,json,gql,md,yaml}\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "prisma:generate": "prisma generate",
     "postinstall": "npm run prisma:generate",
