--- a/helm/charts/services/amplication-server/templates/deployment_autoscaler.yaml
+++ b/helm/charts/services/amplication-server/templates/deployment_autoscaler.yaml
@@ -1,5 +1,5 @@
-{{- define "amplication-server.deployment-autoscaling" -}}
+{{- define "amplication-server.statefulset-autoscaling" -}}
 {{- end }}
-{{- if .Values.deployment.autoscaling.enabled }}
-{{ include "base.deployment-autoscaling" (list . "amplication-server.deployment-autoscaling") -}}
+{{- if .Values.statefulset.autoscaling.enabled }}
+{{ include "base.statefulset-autoscaling" (list . "amplication-server.statefulset-autoscaling") -}}
 {{- end }}
