--- a/packages/amplication-generation-core/package.json
+++ b/packages/amplication-generation-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@amplication/common",
+  "name": "@amplication/generation-core",
   "version": "0.12.6",
   "private": true,
   "main": "dist/index.js",
