--- a/helm/charts/services/amplication-git-push-webhook-service/Chart.yaml
+++ b/helm/charts/services/amplication-git-push-webhook-service/Chart.yaml
@@ -3,6 +3,11 @@ name: amplication-git-push-webhook-service
 description: A Helm chart for the amplication-git-push-webhook-service component of Amplication.
 
 dependencies:
+- name: postgresql
+  alias: postgres
+  version: "10.5.2"
+  repository: "https://charts.bitnami.com/bitnami"
+  condition: postgres.install
 
 - name: base
   version: "0.1.0"
