--- a/packages/amplication-data-service-generator/package.json
+++ b/packages/amplication-data-service-generator/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@amplication/data": "^0.12.7",
+    "@amplication/generation-core": "^0.12.7",
+    "@amplication/basic-auth-plugin": "^0.12.7",
     "@babel/parser": "7.14.7",
     "@extra-set/difference": "2.2.4",
     "amplication-basic-auth-plugin": "^0.0.4",
