--- a/packages/amplication-generation-core/package.json
+++ b/packages/amplication-generation-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@amplication/generation-core",
-  "version": "0.12.6",
+  "version": "0.12.7",
   "private": true,
   "main": "dist/index.js",
   "scripts": {
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "@amplication/data": "^0.12.7",
     "@types/lodash": "^4.14.182"
   }
 }
