--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -148,59 +148,13 @@ jobs:
         id: cc
         run: lerna run --scope=${{matrix.package}} --loglevel=silent test:cov
       
-      - name: Coverage Report
-        if: github.event_name == 'pull_request'
-        uses: danhunsaker/clover-reporter-action@v0.2.17-clover
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          clover-file: packages/${{matrix.service}}/coverage/clover.xml
-      
-      - name: Find Comment Coverage Report
-        if: github.event_name == 'pull_request'
-        uses: peter-evans/find-comment@v2
-        id: fc
-        with:
-          issue-number: ${{ github.event.number }}
-          body-includes: "Total Coverage:"
-          direction: last
-      
-      - name: Find Comment Coverage Report
-        if: github.event_name == 'pull_request'
-        uses: peter-evans/find-comment@v2
-        id: find
-        with:
-          issue-number: ${{ github.event.number }}
-          body-includes: "Coverage after merging"
-          direction: last
-
-      - name: Update comment
-        if: github.event_name == 'pull_request'
-        uses: peter-evans/create-or-update-comment@v2
-        env:
-          SERVICE: ${{matrix.service}}
-        with:
-          comment-id: ${{ steps.fc.outputs.comment-id }}
-          body: |
-            **Edit:** This code-coverage is for $SERVICE service
-          reactions: eyes
-      
-      - name: Update comment
-        if: github.event_name == 'pull_request'
-        uses: peter-evans/create-or-update-comment@v2
-        env:
-          SERVICE: ${{matrix.service}}
-        with:
-          comment-id: ${{ steps.find.outputs.comment-id }}
-          body: |
-            **Edit:** This code-coverage is for $SERVICE service
-          reactions: eyes
-
       - name: Discord notification
         if: failure()
         uses: Ilshidur/action-discord@0.3.2
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_BUILD_NOTIFICATIONS_CHANNEL_WEBHOOK }}
           DISCORD_EMBEDS: '[{"color":15734528,"title":"Push Validation Failed - ${{ env.BRANCH_NAME }}","url":"https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}","description":"Job ${{ github.job }} in workflow ${{ github.workflow }} failed!","fields":[{"name":"Package","value":"${{ matrix.package }}"},{"name":"Commiter","value":"${{ github.event.pusher.name }}"},{"name":"Commit","value":"${{ github.event.head_commit.id }}"},{"name":"Install","value":"${{ steps.install.outcome }}","inline":true},{"name":"Build","value":"${{ steps.build.outcome }}","inline":true},{"name":"Test","value":"${{ steps.test.outcome }}","inline":true},{"name":"Format","value":"${{ steps.format.outcome }}","inline":true},{"name":"Lint","value":"${{ steps.lint.outcome }}","inline":true}]}]'
+  
   docker-build:
     name: docker-build
     needs: [changes]
@@ -364,3 +318,38 @@ jobs:
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_BUILD_NOTIFICATIONS_CHANNEL_WEBHOOK }}
           DISCORD_EMBEDS: '[{"color":15734528,"title":"Push Validation Failed - ${{ env.BRANCH_NAME }}","url":"https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}","description":"Job ${{ github.job }} in workflow ${{ github.workflow }} failed!","fields":[{"name":"Package","value":"${{ matrix.package }}"},{"name":"Commiter","value":"${{ github.event.pusher.name }}"},{"name":"Commit","value":"${{ github.event.head_commit.id }}"}]}]'
+  
+  Code-Coverage:
+    runs-on: ubuntu-18.04
+    if: github.event_name == 'pull_request'
+    needs: [changes, tests] 
+    strategy:
+      matrix:
+        service: ${{ fromJson(needs.changes.outputs.services) }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: output clover-file
+        id: clover-file
+        run: |
+          clover-file=packages/${{matrix.service}}/coverage/clover.xml
+          echo "::set-output name=clover-file::$clover-file"
+      
+      - name: Create comment
+        uses: peter-evans/create-or-update-comment@v2
+        env:
+          SERVICE: ${{matrix.service}}
+          CLOVER-FILE: ${{ steps.clover-file.outputs.clover-file }}
+        with:
+          issue-number: ${{ github.event.number }}
+          body: |
+            This code-coverage is for ${{ env.SERVICE }} service at ${{ env.CLOVER-FILE }} below
+          reactions: '+1'
+
+      - name: Coverage Report
+        id: cc-report
+        uses: danhunsaker/clover-reporter-action@v0.2.17-clover
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          clover-file: packages/${{matrix.service}}/coverage/clover.xml
